Make sure javascript used for song ratings is included in the main layout, collapse the table borders

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -142,6 +142,7 @@ tr.songs a
 table
 {
   width: 100%;
+  border-collapse: collapse;
 }
 
 tr:hover
